Android 13 ready update
Heavy update includes fully tested android 13 ready app. OS interaction has been segregated. Permission check has been enhanced and permission request now working as it intended.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,4 +28,7 @@
     <string name="add_a_snap">Добавить запись</string>
     <string name="fridge_snap">Запись</string>
     <string name="no_comments">Нет коментария</string>
+    <string name="edit_snap_option_menu">Редактировать</string>
+    <string name="delete_snap_option_menu">Удалить</string>
+    <string name="undo">Отменить</string>
 </resources>
